updates to work

--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -27,13 +27,13 @@
         develop and conduct a usability test. We were interested in testing a
         product with a complex, novel interface &mdash; something that presented
         different questions and opportunities than traditional web applications.
-        We decided to work with VR, specifically, the Oculus platform.
+        We decided to work with VR, using the Oculus platform.
       </p>
       <p>
         We were interested in understanding how first-time users would grapple
         with this new interface &mdash; what hurdles they would identify during
-        on-boarding, and how they would adapt and operate the system using a
-        foreign software interface.
+        on-boarding, and how they would adapt and operate a software interface
+        with no prior experience.
       </p>
     </div>
 
@@ -41,23 +41,76 @@
   <div class="work-body">
 
     <h2 class="work-body-h2">
-      Heuristic Analysis
+      VR Applications
     </h2>
 
     <p>
-      At the outset of the project, we decided to focus on two applications on
-      the Oculus platform:
+      At the outset of the project, we decided to focus on two Oculus applications:
     </p>
 
     <ul class="work-body-list">
-      <li>First Contact: the Oculus Touch on-boarding application</li>
-      <li>Tilt Brush: a 3d design application</li>
+      <li>
+        <a class="work-body-link" target="_blank" href="https://www.tiltbrush.com/">
+          First Contact</a> &mdash; the official on-boarding experience provided by Oculus
+      </li>
+      <li>
+        <a class="work-body-link" target="_blank" href="https://www.oculus.com/experiences/rift/1217155751659625/">
+          Tilt Brush</a> &mdash; a 3d design application designed for VR
+      </li>
     </ul>
 
     <p>
-      At the outset of the project, we decided to focus on two applications on
-      the Oculus platform:
+      We chose these applications for a few reasons. First, we wanted to test an
+      interface-driven product, rather than a game. I purchased the Rift when it
+      launched, and had seen how 3d design applications were taking advantage of
+      the VR medium. As a team, we explored Tilt Brush together and decided it
+      was a great candidate.
     </p>
+
+    <div class="work-body-image-grid">
+      <figure class="work-body-figure">
+        <img
+          src="../assets/images/work/uw-oculus-rift-onboarding-in-3d/first-contact.jpg"
+          class="work-body-image border"
+          alt="Footlocker-based sketch">
+        <figcaption class="work-body-image-caption">
+          Oculus First Contact
+        </figcaption>
+      </figure>
+      <figure class="work-body-figure">
+        <img
+          src="../assets/images/work/uw-oculus-rift-onboarding-in-3d/tilt-brush.jpg"
+          class="work-body-image border"
+          alt="Recycling-bin sketch">
+        <figcaption class="work-body-image-caption">
+          Tilt Brush by Google
+        </figcaption>
+      </figure>
+    </div>
+
+    <p>
+      We also determined that we couldn't drop users into a complex application
+      like Tilt Brush without on-boarding. As we used First Contact, we found
+      we were interested in understanding users' reception and comprehension of
+      the application, so we included it in our tests both out of necessity and
+      curiousity.
+    </p>
+
+    <h2 class="work-body-h2">
+      Heuristic Evaluation
+    </h2>
+
+    <p>
+      Our professor for the class, <a class="work-body-link" target="_blank" href="https://twitter.com/rebeccadestello?lang=en">
+      Rebecca Destello</a>, recommended that none of our teams seek out clients
+      for this class. This gave us great lattitude to explore based on our own
+      interests (and many other benefits), but it meant that we would have to
+      come up with a way to determine our research objectives independently. With
+      no stakeholders to dictate our direction, we used a heuristic analysis of
+      our applications to find worthwhile avenues to explore.
+    </p>
+
+
 
   </div>
 
