more work and add h3

--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -1,15 +1,15 @@
 <div class="work-entry">
   <div class="work-intro">
     <div class="work-header">
-      <div class="work-title">
+      <h1 class="work-title">
         On-boarding with the Oculus Platform
-      </div>
+      </h1>
 
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Conducting a usability test to evaluate first time user experiences
-        with Oculus Touch and motion-controlled software
+        Conducting a usability test to evaluate first-time user experiences
+        with Oculus Touch and motion-controlled software.
       </div>
     </div>
 
@@ -27,13 +27,13 @@
         develop and conduct a usability test. We were interested in testing a
         product with a complex, novel interface &mdash; something that presented
         different questions and opportunities than traditional web applications.
-        We decided to work with VR, using the Oculus platform.
       </p>
       <p>
-        We were interested in understanding how first-time users would grapple
-        with this new interface &mdash; what hurdles they would identify during
-        on-boarding, and how they would adapt and operate a software interface
-        with no prior experience.
+        We decided to work with VR, using the Oculus platform. We were interested
+        in understanding how first-time users would grapple with this new
+        interface &mdash; what hurdles they would identify during on-boarding,
+        and how they would adapt and operate a software interface with no prior
+        experience.
       </p>
     </div>
 
@@ -60,11 +60,10 @@
     </ul>
 
     <p>
-      We chose these applications for a few reasons. First, we wanted to test an
-      interface-driven product, rather than a game. I purchased the Rift when it
-      launched, and had seen how 3d design applications were taking advantage of
-      the VR medium. As a team, we explored Tilt Brush together and decided it
-      was a great candidate.
+      Why these applications? First, we wanted to test an interface-driven product,
+      rather than a game. I had purchased the Rift when it launched, and had seen
+      how 3d design applications were taking advantage of the VR medium. As a
+      team, we explored Tilt Brush together and decided it was a great candidate.
     </p>
 
     <div class="work-body-image-grid">
@@ -92,8 +91,14 @@
       We also determined that we couldn't drop users into a complex application
       like Tilt Brush without on-boarding. As we used First Contact, we found
       we were interested in understanding users' reception and comprehension of
-      the application, so we included it in our tests both out of necessity and
-      curiousity.
+      the application.
+    </p>
+
+    <p>
+      On the one hand, it's a very game-like experience, but on the other, it's
+      responsible for imparting foundational context and direction to the user.
+      We wanted to explore how the user perceived this experience, and how well
+      it taught them.
     </p>
 
     <h2 class="work-body-h2">
@@ -101,16 +106,114 @@
     </h2>
 
     <p>
-      Our professor for the class, <a class="work-body-link" target="_blank" href="https://twitter.com/rebeccadestello?lang=en">
-      Rebecca Destello</a>, recommended that none of our teams seek out clients
-      for this class. This gave us great lattitude to explore based on our own
-      interests (and many other benefits), but it meant that we would have to
-      come up with a way to determine our research objectives independently. With
-      no stakeholders to dictate our direction, we used a heuristic analysis of
-      our applications to find worthwhile avenues to explore.
+      Our professor recommended that none of our teams seek out clients to work
+      with for the purposes of the class. This gave us lattitude to explore
+      based on our own interests (as well as other benefits), but it meant that
+      we would have to come up with a way to determine our research objectives
+      independently.
     </p>
 
+    <p>
+      With no stakeholders to dictate our direction, we used a <a class="work-body-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">
+      heuristic analysis</a> of our applications to find worthwhile avenues to
+      explore. Based on our evaluation, we found a wide array of possible
+      problems to explore. We focused on a few out the outset:
+    </p>
 
+    <ul class="work-body-list">
+      <li>
+        <span class="bold">Visibility of System Status</span>: in First Contact,
+        we found there to be few indications if we were making progress. In Tilt
+        Brush, we found a lack of clarity around our current tool selections.
+      </li>
+      <li>
+        <span class="bold">Consistency and standards</span>: input expectations
+        changed from app to app.
+      </li>
+      <li>
+        <span class="bold">Error Prevention</span>: both applications lead the
+        user toward error, often through a lack of clear direction.
+      </li>
+      <li>
+        <span class="bold">Aesthetic and Minimalist Design</span>: menus and
+        environments were visually noisy and sometimes overwhelming.
+      </li>
+      <li>
+        <span class="bold">Help and Documentation</span>: we found poor access
+        to documentation within Tilt Brush.
+      </li>
+    </ul>
+
+    <h2 class="work-body-h2">
+      Developing a Research Plan
+    </h2>
+
+    <p>
+      Our next task was to codify our early findings into a concrete, clearly-scoped
+      research plan.
+    </p>
+
+    <p>
+      We prioritized problems that were foundational, rather than those that
+      could be attributed to "figuring out" emerging issues in VR. At this time,
+      it's unrealistic that VR apps present a common, synchronous interface, for
+      instance. We focused on education and on-boarding problems, and organized
+      the following research questions:
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        What challenges do first-time users run into while using the Oculus
+        platform?
+      </li>
+      <li>
+        How does ease of use for each app impact satisfaction for the entire
+        experience?
+      </li>
+      <li>
+        How easily and successfully do first-time users interact with First
+        Contact and Tilt Brush?
+      </li>
+    </ul>
+
+    <p>
+      We also developed our research plan to outline how we would evaluate
+      these questions.
+    </p>
+
+    <h3 class="work-body-h3">
+      Target Users
+    </h3>
+
+    <p>
+      We prioritized problems that were foundational, rather than those that
+      could be attributed to "figuring out" emerging issues in VR. At this time,
+      it's unrealistic that VR apps present a common, synchronous interface, for
+      instance. We focused on education and on-boarding problems, and organized
+      the following research questions:
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        Who are our target users?
+      </li>
+      <li>
+        What is our methodology?
+      </li>
+      <li>
+        What tasks will we use, and how will they be structured?
+      </li>
+    </ul>
+
+    <figure class="work-body-figure">
+      <img
+        src="../assets/images/work/uw-oculus-rift-onboarding-in-3d/team-oasis-at-work.png"
+        class="work-body-image border"
+        alt="Team Oasis at Work">
+      <figcaption class="work-body-image-caption">
+        Our team, in a not-at-all-staged photograph
+      </figcaption>
+    </figure>
 
   </div>
 
