--- a/src/assets/work-templates/uw-secure-storage-in-shelters.html
+++ b/src/assets/work-templates/uw-secure-storage-in-shelters.html
@@ -1,9 +1,9 @@
 <div class="work-entry">
   <div class="work-intro">
     <div class="work-header">
-      <div class="work-title">
+      <h1 class="work-title">
         Secure Storage for Tent Cities
-      </div>
+      </h1>
 
       <div class="work-title-border"></div>
 
@@ -23,16 +23,14 @@
 
     <div class="work-description">
       <p>
-        In September 2017, I joined the University of Washington's HCDE
-        program, and began my first core class: a foundational user-centered
-        design course. I formed a group with three others to find a problem and
-        design a user-centered solution. As we met and began to discuss the
-        task, we found we were all motivated to choose a problem that was
-        socially-responsible, current, under-investigated, and relevant to our
-        local region.
+        In September 2017, I formed a group with three other graduate students to
+        find a problem and design a user-centered solution. As we met and began
+        to discuss the task, we found we were all motivated to choose a problem
+        that was socially-responsible, current, under-investigated, and relevant
+        to our local region.
       </p>
       <p>
-        We selected a project that could aid thousands of Seattle's citizens:
+        We selected a project that could impact thousands of Seattle's citizens:
         design a user-centered solution to help homeless Seattle residents store
         their possessions securely and sustainably.
       </p>
