more work and stubbing out remainder of oasis study

--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -106,15 +106,7 @@
     </h2>
 
     <p>
-      Our professor recommended that none of our teams seek out clients to work
-      with for the purposes of the class. This gave us lattitude to explore
-      based on our own interests (as well as other benefits), but it meant that
-      we would have to come up with a way to determine our research objectives
-      independently.
-    </p>
-
-    <p>
-      With no stakeholders to dictate our direction, we used a <a class="work-body-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">
+      Without stakeholders to dictate our direction, we used a <a class="work-body-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">
       heuristic analysis</a> of our applications to find worthwhile avenues to
       explore. Based on our evaluation, we found a wide array of possible
       problems to explore. We focused on a few out the outset:
@@ -149,8 +141,8 @@
     </h2>
 
     <p>
-      Our next task was to codify our early findings into a concrete, clearly-scoped
-      research plan.
+      Our next task was to use our findings from discovery to developed a concrete,
+      clearly-scoped research plan.
     </p>
 
     <p>
@@ -176,34 +168,63 @@
       </li>
     </ul>
 
-    <p>
-      We also developed our research plan to outline how we would evaluate
-      these questions.
-    </p>
-
     <h3 class="work-body-h3">
-      Target Users
+      Components of the Research Plan
     </h3>
 
     <p>
-      We prioritized problems that were foundational, rather than those that
-      could be attributed to "figuring out" emerging issues in VR. At this time,
-      it's unrealistic that VR apps present a common, synchronous interface, for
-      instance. We focused on education and on-boarding problems, and organized
-      the following research questions:
+      We developed our research plan to outline how we would evaluate these
+      questions. The plan included all of the necessary operational information.
     </p>
 
     <ul class="work-body-list">
       <li>
-        Who are our target users?
+        Target users, with inclusion and exclusion criteria
       </li>
       <li>
-        What is our methodology?
+        Methodology, including moderation (in-person), duration, number of
+        participants, protocols, and interview structure (e.g., pre-test
+        interview, post-task interview)
       </li>
       <li>
-        What tasks will we use, and how will they be structured?
+        Task lists, including starting state and success state
+      </li>
+      <li>
+        Data collection goals, including quantitative data, qualitative data,
+        subjective/objective evaluation, and collection methodology (e.g., Think
+        Aloud Protocol, or Likert scales)
+      </li>
+      <li>
+        Test logistics, equipment, location details
+      </li>
+      <li>
+        Results, reporting, deliverables, and timeline
       </li>
     </ul>
+
+    <h2 class="work-body-h2">
+      Running the Usability Study
+    </h2>
+
+    <p>
+      And I know you're saying, 'Oh Bob, you've done it this time.' And you may
+      be right. You don't want to kill all your dark areas they are very important.
+      Automatically, all of these beautiful, beautiful things will happen. Any
+      little thing can be your friend if you let it be. In life you need colors.
+      There's not a thing in the world wrong with washing your brush.
+    </p>
+
+    <h2 class="work-body-h2">
+      Analysis and Organizing Findings
+    </h2>
+
+    <p>
+      And I know you're saying, 'Oh Bob, you've done it this time.' And you may
+      be right. You don't want to kill all your dark areas they are very important.
+      Automatically, all of these beautiful, beautiful things will happen. Any
+      little thing can be your friend if you let it be. In life you need colors.
+      There's not a thing in the world wrong with washing your brush.
+    </p>
 
     <figure class="work-body-figure">
       <img
@@ -214,6 +235,18 @@
         Our team, in a not-at-all-staged photograph
       </figcaption>
     </figure>
+
+    <h2 class="work-body-h2">
+      Presenting and Reporting Out
+    </h2>
+
+    <p>
+      And I know you're saying, 'Oh Bob, you've done it this time.' And you may
+      be right. You don't want to kill all your dark areas they are very important.
+      Automatically, all of these beautiful, beautiful things will happen. Any
+      little thing can be your friend if you let it be. In life you need colors.
+      There's not a thing in the world wrong with washing your brush.
+    </p>
 
   </div>
 
