add to oasis study

--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -115,7 +115,7 @@
     <ul class="work-body-list">
       <li>
         <span class="bold">Visibility of System Status</span>: in First Contact,
-        we found there to be few indications if we were making progress. In Tilt
+        we found some of us were confused about what we should be doing. In Tilt
         Brush, we found a lack of clarity around our current tool selections.
       </li>
       <li>
@@ -137,7 +137,7 @@
     </ul>
 
     <h2 class="work-body-h2">
-      Developing a Research Plan
+      Research Planning
     </h2>
 
     <p>
@@ -202,16 +202,67 @@
       </li>
     </ul>
 
+    <p>
+      Based on our plan, we began to recruit and screen our participants. To do so
+      we tapped our social networks and created an online screener survey. Meanwhile,
+      we also prepared our session script, data collection documents, and
+      other logistical docs.
+    </p>
+
     <h2 class="work-body-h2">
       Running the Usability Study
     </h2>
 
     <p>
-      And I know you're saying, 'Oh Bob, you've done it this time.' And you may
-      be right. You don't want to kill all your dark areas they are very important.
-      Automatically, all of these beautiful, beautiful things will happen. Any
-      little thing can be your friend if you let it be. In life you need colors.
-      There's not a thing in the world wrong with washing your brush.
+      We brought 8 individuals to Facebook's offices for our study. Each of us
+      moderated two, one-hour sessions with participants.
+    </p>
+
+    <div class="work-body-image-grid">
+      <figure class="work-body-figure">
+        <img
+          src="../assets/images/work/uw-oculus-rift-onboarding-in-3d/moderation-3a.png"
+          class="work-body-image border"
+          alt="Helping Participants in VR">
+        <figcaption class="work-body-image-caption">
+          Helping Participants into VR
+        </figcaption>
+      </figure>
+      <figure class="work-body-figure">
+        <img
+          src="../assets/images/work/uw-oculus-rift-onboarding-in-3d/moderation-2a.png"
+          class="work-body-image border"
+          alt="Moderation in Tilt Brush">
+        <figcaption class="work-body-image-caption">
+          Moderating with Tilt Brush
+        </figcaption>
+      </figure>
+    </div>
+
+    <p>
+      We each navigated many of the unique hurdles to testing in VR:
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        Ensuring participants were comfortable among strangers, while blind to their
+        surroundings
+      </li>
+      <li>
+        Moderating participants who can't see you
+      </li>
+      <li>
+        Exposing participants to a completely foreign interface, and persistently
+        encouraging and exploring Think-Aloud dialogue
+      </li>
+    </ul>
+
+    <p>
+      We also conducted the interviews outlined in our research plan -- pre and
+      post-test, as well as post-task and post-application interviews. During
+      our team-mates' sessions, we aided in note-taking, chaperoning
+      participants with the equipment, noting quantitative success/failure, and
+      asking select follow-up questions during interviews.
     </p>
 
     <h2 class="work-body-h2">
@@ -219,11 +270,11 @@
     </h2>
 
     <p>
-      And I know you're saying, 'Oh Bob, you've done it this time.' And you may
-      be right. You don't want to kill all your dark areas they are very important.
-      Automatically, all of these beautiful, beautiful things will happen. Any
-      little thing can be your friend if you let it be. In life you need colors.
-      There's not a thing in the world wrong with washing your brush.
+      We began to analyze our findings after testing our first participant. Typically,
+      we would each note our own findings, and then begin to compare after reflecting
+      independently. By the time we completed our eighth and final test, we had a
+      growing body of findings, and were approaching consensus among the most
+      severe issues.
     </p>
 
     <figure class="work-body-figure">
@@ -232,21 +283,50 @@
         class="work-body-image border"
         alt="Team Oasis at Work">
       <figcaption class="work-body-image-caption">
-        Our team, in a not-at-all-staged photograph
+        Our team, in a not-at-all-staged photograph; affinity-diagrams decorate
+        the walls
       </figcaption>
     </figure>
+
+    <p>
+      We met a number of times following the study to prioritize our findings, put
+      together affinity diagrams, and draft out our presentation and report.
+    </p>
+
 
     <h2 class="work-body-h2">
       Presenting and Reporting Out
     </h2>
 
     <p>
-      And I know you're saying, 'Oh Bob, you've done it this time.' And you may
-      be right. You don't want to kill all your dark areas they are very important.
-      Automatically, all of these beautiful, beautiful things will happen. Any
-      little thing can be your friend if you let it be. In life you need colors.
-      There's not a thing in the world wrong with washing your brush.
+      To get a full look at our findings, you can review <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/j8jxp2u9y2738py/ProjectOasis-OculusRift-3-6-final.pdf?dl=0">
+      our presentation</a> and <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/1dn8c7vbxu422ew/Oasis-Report.pdf?dl=0">our final report</a>.
     </p>
+
+    <figure class="work-body-figure">
+      <a target="_blank" href="https://www.dropbox.com/s/j8jxp2u9y2738py/ProjectOasis-OculusRift-3-6-final.pdf?dl=0">
+        <img
+          src="../assets/images/work/uw-oculus-rift-onboarding-in-3d/oasis-presentation.png"
+          class="work-body-image border"
+          alt="Presentation of findings">
+      </a>
+      <figcaption class="work-body-image-caption">
+        Our presentation was limited to 15 minutes, but detailed the project and
+        our most salient findings
+      </figcaption>
+    </figure>
+
+    <p>
+      This is a detailed report, and I'd be happy to answer any questions about it.
+      We uncovered many actionable findings across both First Contact and Tilt Brush.
+    </p>
+
+    <p>
+      For me personally, I've enjoyed working with VR for many years, and the
+      process of conducting this research only made me more certain about the
+      exciting questions we can continue to explore in this interactive frontier.
+    </p>
+
 
   </div>
 
