--- a/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
+++ b/src/assets/work-templates/uw-oculus-rift-onboarding-in-3d.html
@@ -61,7 +61,7 @@
 
     <p>
       Why these applications? First, we wanted to test an interface-driven product,
-      rather than a game. I had purchased the Rift when it launched, and had seen
+      rather than a game. I had purchased the Rift when it launched and had seen
       how 3d design applications were taking advantage of the VR medium. As a
       team, we explored Tilt Brush together and decided it was a great candidate.
     </p>
@@ -109,7 +109,7 @@
       Without stakeholders to dictate our direction, we used a <a class="work-body-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">
       heuristic analysis</a> of our applications to find worthwhile avenues to
       explore. Based on our evaluation, we found a wide array of possible
-      problems to explore. We focused on a few out the outset:
+      problems to explore. We focused on a few at the outset:
     </p>
 
     <ul class="work-body-list">
@@ -141,7 +141,7 @@
     </h2>
 
     <p>
-      Our next task was to use our findings from discovery to developed a concrete,
+      Our next task was to use our findings from discovery to develop a concrete,
       clearly-scoped research plan.
     </p>
 
@@ -326,7 +326,6 @@
       process of conducting this research only made me more certain about the
       exciting questions we can continue to explore in this interactive frontier.
     </p>
-
 
   </div>
 
