adding a structure to rcrc

--- a/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
+++ b/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
@@ -2,42 +2,116 @@
   <div class="work-intro">
     <div class="work-header">
       <h1 class="work-title">
-        Research in a Complex System
+        Collaborative Research with the IFRC
       </h1>
 
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        System blah blah.
+        Understanding a complex humanitarian system, and planning a human-centered
+        intervention to improve vulnerability assessments
       </div>
     </div>
 
     <ul class="work-tags">
       <li class="work-tag">UX Research</li>
       <li class="work-tag">Research Planning</li>
-      <li class="work-tag">Usability Testing</li>
-      <li class="work-tag">Qualitative Research</li>
-      <li class="work-tag">Quantitative Research</li>
+      <li class="work-tag">Literature Review</li>
+      <li class="work-tag">Secondary Source Interviews</li>
     </ul>
 
     <div class="work-description">
       <p>
-        In January 2018, I formed a group with three other graduate students to
-        develop and conduct a usability test. We were interested in testing a
-        product with a complex, novel interface &mdash; something that presented
-        different questions and opportunities than traditional web applications.
+        Through a unique partnership between the <a class="work-body-link" target="_blank" href="https://media.ifrc.org/">
+        International Federation of Red Cross and Red Crescent Societies (IFRC)</a>
+        and the University of Washington, my class studying Complex Systems was able to collaboratively
+        research ways to incorporate Human-Centered principles into the
+        <a class="work-body-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a>
+        system.
       </p>
+
       <p>
-        We decided to work with VR, using the Oculus platform. We were interested
-        in understanding how first-time users would grapple with this new
-        interface &mdash; what hurdles they would identify during on-boarding,
-        and how they would adapt and operate a software interface with no prior
-        experience.
+        The IFRC has been a leader in the development and application of participatory
+        design systems, and the VCA system is just one such example. As experts on
+        the meeting points of technology and human-centered research & design, we
+        collaborated with many Red Cross teams to layout distinct opportunities
+        to better integrate new technology into their participatory VCA approach.
       </p>
     </div>
 
   </div>
   <div class="work-body">
+
+    <h2 class="work-body-h2">
+      Building Understanding
+    </h2>
+
+    <p>
+      At the outset of this project, our first step -- and one that was foundational
+      to any measurement of our success -- was to recalibrate our understanding of our
+      domain to align with <a class="work-body-link" target="_blank" href="https://media.ifrc.org/ifrc/who-we-are/fundamental-principles/">
+      humanitarian principles</a>.
+    </p>
+
+    <figure class="work-body-figure">
+      <a target="_blank" href="https://youtu.be/Fv5vE2vxYwY">
+        <img
+          src="../assets/images/work/uw-rcrc-complex-systems-and-vca/art-science-vca.png"
+          class="work-body-image border"
+          alt="Link to the Art and Science of VCA">
+        </a>
+      <figcaption class="work-body-image-caption">
+        An explanatory video about the IFRC's VCA system
+      </figcaption>
+    </figure>
+
+    <p>
+      Simultaneously, we dug deeply into the notion of complex systems and system
+      design, reading two texts that informed our understanding.
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        <a class="work-body-link" target="_blank" href="https://mitpress.mit.edu/books/streetlights-and-shadows">
+          Streetlights & Shadows</a> &mdash; Gary Klein's investigation into what
+          it means to design in and for a complex, changing environment.
+      </li>
+      <li>
+        <a class="work-body-link" target="_blank" href="http://www.gurteen.com/gurteen/gurteen.nsf/id/X00052762/">
+          Information Ecology</a> &mdash; Thomas Davenport's exploration into the
+          human-centered basis of the information we share.
+      </li>
+    </ul>
+
+    <p>
+      This period of literary review and introductory interviews with our IFRC
+      colleagues was critical for us to build the understanding we needed to
+      in order to understand, first, the language of our clients at the IFRC, and
+      in turn, the millions of individuals they support through the VCA system.
+    </p>
+
+    <p>
+      Some examples of the many take-aways from this period include:
+    </p>
+
+    <ul class="work-body-list">
+      <li>
+        The community comes first. While there are many stakeholders in the VCA
+        system, it is the community that determines the plan and owns the results.
+      </li>
+      <li>
+        Communicating scope is the best way to mitigate the constant push and pull
+        of changing variables in a large, complex system. Stakeholders, requirements,
+        participants, and directives may constantly change, but by maintaining a
+        shared sense of scope, the project can still succeed.
+      </li>
+      <li>
+        Systems don't succeed or fail; rather, they shift around the active stakeholders'
+        competing objectives. As researchers, our task is to understand the system
+        and those influencing it. Once we have an understanding of the system, we
+        can begin to design for it.
+      </li>
+    </ul>
 
   </div>
 
