good ol m dashes

--- a/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
+++ b/src/assets/work-templates/uw-rcrc-complex-systems-and-vca.html
@@ -47,8 +47,8 @@
     </h2>
 
     <p>
-      At the outset of this project, our first step -- and one that was foundational
-      to any measurement of our success -- was to recalibrate our understanding of our
+      At the outset of this project, our first step &mdash; and one that was foundational
+      to any measurement of our success &mdash; was to recalibrate our understanding of our
       domain to align with <a class="work-body-link" target="_blank" href="https://media.ifrc.org/ifrc/who-we-are/fundamental-principles/">
       humanitarian principles</a>.
     </p>
